edited lock button in submission pages; updated survey page; fixed p:selectBooleanCheckbox line wrap problem; added Public course;

--- a/WebContent/resources/learnweb-layout/css/styles.css
+++ b/WebContent/resources/learnweb-layout/css/styles.css
@@ -10540,6 +10540,9 @@ body .ui-tabs.ui-tabs-transparent .ui-tabs-panels {
     border-right: 1px solid #ced4da !important;
   }
 }
+body .ui-chkbox {
+  display: inline-flex;
+}
 
 .table-responsive {
   table-layout: auto !important;
