--- a/WebContent/resources/learnweb-layout/sass/utilities/_primefaces.scss
+++ b/WebContent/resources/learnweb-layout/sass/utilities/_primefaces.scss
@@ -106,4 +106,8 @@ body {
       }
     }
   }
+
+  .ui-chkbox {
+    display: inline-flex;
+  }
 }
